Download Links Added

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 				<div class="container">
 					<div class="row banner_content">
 						<div class="col-lg-9">
-							<h2>The Best App <br />in the Universe</h2>
-							<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women.</p>
-							<a class="banner_btn" href="#">Explore Now</a>
+							<h2>Xymen <br />Remote WhatsApp</h2>
+							<p>Remotely access and control WhatsApp of any device from anywhere in the world. Gives ability to operate WhatsApp from more than one location.</p>
+							<a class="banner_btn" href="http://bit.ly/xymen-july-2019">Download</a>
 						</div>
 						<div class="col-lg-3">
 							<div class="banner_map_img">
