--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div class="col-lg-9">
 							<h2>Xymen <br />Remote WhatsApp</h2>
 							<p>Remotely access and control WhatsApp of any device from anywhere in the world. Gives ability to operate WhatsApp from more than one location.</p>
-							<a class="banner_btn" href="http://bit.ly/xymen-july-2019">Download</a>
+							<a class="banner_btn" href="http://bit.ly/gdrive-common-vc1">Download</a>
 						</div>
 						<div class="col-lg-3">
 							<div class="banner_map_img">
