--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 							<h2>Xymen <br />Remote WhatsApp</h2>
 							<p>Remotely access and control WhatsApp of any device from anywhere in the world. Gives ability to operate WhatsApp from more than one location.</p>
 							<a class="banner_btn" href="http://bit.ly/website-common-vc1">Download</a>
+                
+              <a class="banner_btn" href="https://getxymenapps.com/">Xymen Web X</a>
 						</div>
 						<div class="col-lg-3">
 							<div class="banner_map_img">
