--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div class="col-lg-9">
 							<h2>Xymen <br />Remote WhatsApp</h2>
 							<p>Remotely access and control WhatsApp of any device from anywhere in the world. Gives ability to operate WhatsApp from more than one location.</p>
-							<a class="banner_btn" href="http://bit.ly/website-common-vc1">Download</a>
+							<a class="banner_btn" href="http://bit.ly/xymen-gdownload-vc1">Download</a>
                 
               <a class="banner_btn" href="https://getxymenapps.com/">Xymen Web X</a>
 						</div>
