V2 of Xymen Lite, Added Button for Xymen Pro

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
   						<div class="col-lg-9">
   							<h2>Xymen <br />Remote WhatsApp</h2>
   							<p>Remotely access and control WhatsApp of any device from anywhere in the world. Gives ability to operate WhatsApp from more than one location.</p>
-  							<a class="banner_btn" href="http://bit.ly/xymen-gdownload-vc1">Download</a>
+  							<a class="banner_btn" href="http://bit.ly/xymen-lite-gdownload-vc2">Xymen Lite</a>
+                <a class="banner_btn" href="#">Xymen Pro (Coming Soon)</a>
   						</div>
   						<div class="col-lg-3">
   							<div class="banner_map_img">
