--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           			<div class="col-lg-3 col-md-6">
           				<div class="feature_item">
           					<img src="img/icon/f-icon-1.png" alt="">
-          					<h4>Maintenance</h4>
+          					<h4>Unlimited Clients</h4>
           					<p>inappropriate behavior is often laughed off as boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.</p>
           				</div>
           			</div>
@@ -141,8 +141,8 @@
           			<div class="col-lg-3 col-md-6">
           				<div class="feature_item">
           					<img src="img/icon/f-icon-1.png" alt="">
-          					<h4>Maintenance</h4>
-          					<p>inappropriate behavior is often laughed off as boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.</p>
+          					<h4>Lite Version</h4>
+          					<p>Specially developed for low-end devices. Less than 5 MB.</p>
           				</div>
           			</div>
           		</div>
@@ -186,7 +186,7 @@
           		</div>
           		<div class="video_area" id="video">
           			<img class="img-fluid" src="img/video-1.png" alt="">
-          			<a class="popup-youtube" href="https://www.youtube.com/watch?v=VufDd-QL1c0">
+          			<a class="popup-youtube" href="https://www.youtube.com/watch?v=9koSJ6TXTls">
           				<img src="img/icon/video-icon-1.png" alt="">
           			</a>
           		</div>
@@ -199,48 +199,48 @@
           	<div class="container">
           		<div class="main_title">
           			<h2>Pricing Table</h2>
-          			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
+          			<p>We don't charge a single penny from our app users. No Hidden Charges. No In-App Purchases. We just want you to enjoy your free app.</p>
           		</div>
           		<div class="price_item_inner row">
-          			<div class="col-lg-4">
+          			<div class="col-lg-6">
           				<div class="price_item">
           					<div class="price_head">
           						<div class="float-left">
-          							<h3>Standard</h3>
-          							<p>For the individuals</p>
+          							<h3>Xymen Pro</h3>
+          							<p>Recommended Version</p>
           						</div>
           						<div class="float-right">
-          							<h2>£199</h2>
+          							<h2>Free</h2>
           						</div>
           					</div>
           					<div class="price_body">
           						<ul class="list">
-          							<li><a href="#">2.5 GB Free Photos</a></li>
-          							<li><a href="#">Secure Online Transfer Indeed</a></li>
+          							<li><a href="#">Faster Rendering</a></li>
+          							<li><a href="#">Secure App Lock</a></li>
           							<li><a href="#">Unlimited Styles for interface</a></li>
           							<li><a href="#">Reliable Customer Service</a></li>
           							<li><a href="#">Manual Backup Provided</a></li>
           						</ul>
           					</div>
           					<div class="price_footer">
-          						<a class="main_btn2" href="#">Purchase Plan</a>
+          						<a class="main_btn2" href="#">Coming Soon</a>
           					</div>
           				</div>
           			</div>
-          			<div class="col-lg-4">
+          			<div class="col-lg-6">
           				<div class="price_item">
           					<div class="price_head">
           						<div class="float-left">
-          							<h3>Standard</h3>
-          							<p>For the individuals</p>
+          							<h3>Xymen Lite</h3>
+          							<p>For low end devices</p>
           						</div>
           						<div class="float-right">
-          							<h2>£199</h2>
+          							<h2>Free</h2>
           						</div>
           					</div>
           					<div class="price_body">
           						<ul class="list">
-          							<li><a href="#">2.5 GB Free Photos</a></li>
+          							<li><a href="#">Less than 5 MB</a></li>
           							<li><a href="#">Secure Online Transfer Indeed</a></li>
           							<li><a href="#">Unlimited Styles for interface</a></li>
           							<li><a href="#">Reliable Customer Service</a></li>
@@ -248,32 +248,7 @@
           						</ul>
           					</div>
           					<div class="price_footer">
-          						<a class="main_btn2" href="#">Purchase Plan</a>
-          					</div>
-          				</div>
-          			</div>
-          			<div class="col-lg-4">
-          				<div class="price_item">
-          					<div class="price_head">
-          						<div class="float-left">
-          							<h3>Standard</h3>
-          							<p>For the individuals</p>
-          						</div>
-          						<div class="float-right">
-          							<h2>£199</h2>
-          						</div>
-          					</div>
-          					<div class="price_body">
-          						<ul class="list">
-          							<li><a href="#">2.5 GB Free Photos</a></li>
-          							<li><a href="#">Secure Online Transfer Indeed</a></li>
-          							<li><a href="#">Unlimited Styles for interface</a></li>
-          							<li><a href="#">Reliable Customer Service</a></li>
-          							<li><a href="#">Manual Backup Provided</a></li>
-          						</ul>
-          					</div>
-          					<div class="price_footer">
-          						<a class="main_btn2" href="#">Purchase Plan</a>
+          						<a class="main_btn2" href="http://bit.ly/xymen-lite-gdownload-vc2">Download</a>
           					</div>
           				</div>
           			</div>
@@ -286,8 +261,8 @@
           <section class="screenshot_area p_120" id="screen">
           	<div class="container">
           		<div class="main_title">
-          			<h2>Unique Screenshots</h2>
-          			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
+          			<h2>Screenshots</h2>
+          			<p>Here are the some of the glimpse of the app featuring its different stages. You will get a similar experience like below.</p>
           		</div>
           		<div class="screenshot_inner owl-carousel">
           			<div class="item">
@@ -361,7 +336,7 @@
   									<i class="fa fa-apple" aria-hidden="true"></i>
   								</div>
   								<div class="media-body">
-  									<a href="#"><h4>Available</h4></a>
+  									<a href="#"><h4>Coming Soon</h4></a>
   									<p>on App Store</p>
   								</div>
   							</div>
@@ -372,8 +347,8 @@
   									<i class="fa fa-android" aria-hidden="true"></i>
   								</div>
   								<div class="media-body">
-  									<a href="#"><h4>Available</h4></a>
-  									<p>on App Store</p>
+  									<a href="#"><h4>Coming Soon</h4></a>
+  									<p>on Play Store</p>
   								</div>
   							</div>
           				</div>
@@ -480,13 +455,12 @@
                   </div>
                   <div class="row footer-bottom d-flex justify-content-between align-items-center">
                       <p class="col-lg-8 col-md-8 footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | XymenApps</p>
                       <div class="col-lg-4 col-md-4 footer-social">
-                          <a href="#"><i class="fa fa-facebook"></i></a>
-                          <a href="#"><i class="fa fa-twitter"></i></a>
-                          <a href="#"><i class="fa fa-dribbble"></i></a>
-                          <a href="#"><i class="fa fa-behance"></i></a>
+                          <a href="http://www.facebook.com/XymenInc" target="_blank"><i class="fa fa-facebook"></i></a>
+                          <a href="https://twitter.com/XymenInc" target="_blank"><i class="fa fa-twitter"></i></a>
+                          <a href="https://www.instagram.com/xymen.apps/" target="_blank"><i class="fa fa-instagram"></i></a>
+                          <a href="https://www.youtube.com/channel/UCv3oAptrhTg9l10B_goBBnA" target="_blank"><i class="fa fa-youtube"></i></a>
                       </div>
                   </div>
               </div>
