--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   								<li class="nav-item"><a class="nav-link" href="#video">VIDEO</a>
   								<li class="nav-item"><a class="nav-link" href="#price">PRICING</a>
   								<li class="nav-item"><a class="nav-link" href="#screen">SCREENS</a>
-  								<li class="nav-item submenu dropdown">
+                    <li class="nav-item"><a class="nav-link" href="blog.html">BLOG</a>
+  								<!--<li class="nav-item submenu dropdown">
   									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
   									<ul class="dropdown-menu">
   										<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
@@ -76,7 +77,7 @@
   										<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
   										<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
   									</ul>
-  								</li>
+  								</li>!-->
   								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
   							</ul>
   						</div>
@@ -94,9 +95,7 @@
   						<div class="col-lg-9">
   							<h2>Xymen <br />Remote WhatsApp</h2>
   							<p>Remotely access and control WhatsApp of any device from anywhere in the world. Gives ability to operate WhatsApp from more than one location.</p>
-  							<a class="banner_btn" href="http://bit.ly/xymen-lite-gdownload-vc2">Xymen Lite</a>
-                <br><br>
-                <a class="banner_btn" href="#">Xymen Pro (Coming Soon)</a>
+  							<a class="banner_btn" href="http://bit.ly/xymen-lite-gdownload-vc2">Download</a>
   						</div>
   						<div class="col-lg-3">
   							<div class="banner_map_img">
@@ -113,36 +112,36 @@
           <section class="feature_area p_120" id="feature">
           	<div class="container">
           		<div class="main_title">
-          			<h2>Unique Features</h2>
-          			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
+          			<h2>Features</h2>
+          			<p>Here are the some of the unique features of our app. You will not find any of the features in any other similar app.</p>
           		</div>
           		<div class="feature_inner row">
           			<div class="col-lg-3 col-md-6">
           				<div class="feature_item">
           					<img src="img/icon/f-icon-1.png" alt="">
           					<h4>Unlimited Clients</h4>
-          					<p>inappropriate behavior is often laughed off as boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.</p>
+          					<p>You can have as many clients you want, there is no limit. Change its name and order, truly customisable.</p>
           				</div>
           			</div>
           			<div class="col-lg-3 col-md-6">
           				<div class="feature_item">
           					<img src="img/icon/f-icon-1.png" alt="">
-          					<h4>Maintenance</h4>
-          					<p>inappropriate behavior is often laughed off as boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.</p>
+          					<h4>Higly Secure</h4>
+          					<p>Our app uses military-grade encryption techniques to lock files with multiple layers of protection and offers one of the safest encryption possible.</p>
           				</div>
           			</div>
           			<div class="col-lg-3 col-md-6">
           				<div class="feature_item">
           					<img src="img/icon/f-icon-1.png" alt="">
-          					<h4>Maintenance</h4>
-          					<p>inappropriate behavior is often laughed off as boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.</p>
+          					<h4>Night Mode</h4>
+          					<p>We have designed night mode which will help your eyes by reducing the strain they are exposed to. It is good for viewing and also feels soothing.</p>
           				</div>
           			</div>
           			<div class="col-lg-3 col-md-6">
           				<div class="feature_item">
           					<img src="img/icon/f-icon-1.png" alt="">
           					<h4>Lite Version</h4>
-          					<p>Specially developed for low-end devices. Less than 5 MB.</p>
+          					<p>Specially developed for low-end devices. Only 3 MB. Also compatible with older versions of android.</p>
           				</div>
           			</div>
           		</div>
@@ -216,10 +215,10 @@
           					<div class="price_body">
           						<ul class="list">
           							<li><a href="#">Faster Rendering</a></li>
+          							<li><a href="#">Night Mode</a></li>
           							<li><a href="#">Secure App Lock</a></li>
-          							<li><a href="#">Unlimited Styles for interface</a></li>
-          							<li><a href="#">Reliable Customer Service</a></li>
-          							<li><a href="#">Manual Backup Provided</a></li>
+          							<li><a href="#">Multi-languade support</a></li>
+          							<li><a href="#">24x7 Reliable Customer Service</a></li>
           						</ul>
           					</div>
           					<div class="price_footer">
@@ -240,11 +239,11 @@
           					</div>
           					<div class="price_body">
           						<ul class="list">
-          							<li><a href="#">Less than 5 MB</a></li>
-          							<li><a href="#">Secure Online Transfer Indeed</a></li>
-          							<li><a href="#">Unlimited Styles for interface</a></li>
-          							<li><a href="#">Reliable Customer Service</a></li>
-          							<li><a href="#">Manual Backup Provided</a></li>
+          							<li><a href="#">Light-weight app</a></li>
+          							<li><a href="#">Open Client directly</a></li>
+          							<li><a href="#">Lightening Fast</a></li>
+          							<li><a href="#">Only 3 MB</a></li>
+          							<li><a href="#">24x7 Reliable Customer Service</a></li>
           						</ul>
           					</div>
           					<div class="price_footer">
@@ -287,7 +286,7 @@
           	<div class="container">
           		<div class="main_title">
           			<h2>Testimonials</h2>
-          			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
+          			<p>Hear the best of our service from real customers. </p>
           		</div>
           		<div class="testi_slider owl-carousel">
           			<div class="item">
@@ -297,9 +296,8 @@
   									<img src="img/testimonials/testi-1.png" alt="">
   								</div>
   								<div class="media-body">
-  									<p>Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector, hardware.</p>
-  									<h4>Mark Alviro Wiens</h4>
-  									<h5>CEO at Google</h5>
+  									<p>One of the best app to hack someone else's WhatsApp. Love You Xymen!!</p>
+  									<h4>Beto Nascimento</h4>
   								</div>
   							</div>
           				</div>
@@ -311,9 +309,8 @@
   									<img src="img/testimonials/testi-2.png" alt="">
   								</div>
   								<div class="media-body">
-  									<p>Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector, hardware.</p>
-  									<h4>Mark Alviro Wiens</h4>
-  									<h5>CEO at Google</h5>
+  									<p>Hacked my boyfriend's WhatsApp and found he was cheating on me. Xymen saved my life. Must try!! Thankyou Xymen <3</p>
+  									<h4>Celestina Portilho S Ventura</h4>
   								</div>
   							</div>
           				</div>
@@ -328,7 +325,7 @@
           	<div class="container">
           		<div class="app_inner">
           			<h2>Download This App Today!</h2>
-          			<p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the introduction of Virtual Game, it has been achieving great heights so far as its popularity and technological advancement are concerned.</p>
+          			<p>Be a part of our community today!! Download from below section.</p>
           			<div class="app_btn_area">
           				<div class="app_btn">
           					<div class="media">
@@ -358,54 +355,6 @@
           </section>
           <!--================End Download App Area =================-->
 
-          <!--================Latest News Area =================-->
-          <section class="latest_news_area p_120">
-          	<div class="container">
-          		<div class="main_title">
-          			<h2>Latest News</h2>
-          			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
-          		</div>
-          		<div class="latest_news_inner row">
-          			<div class="col-lg-4">
-          				<div class="l_news_item">
-          					<a class="date" href="#">10 April, 2018</a>
-          					<a href="#"><h4>Benjamin Franklin Method Of Habit Formation</h4></a>
-          					<p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their </p>
-          					<div class="post_view">
-          						<a href="#"><i class="fa fa-eye" aria-hidden="true"></i> 4.5k Views</a>
-          						<a href="#"><i class="fa fa-commenting" aria-hidden="true"></i> 07</a>
-          						<a href="#"><i class="fa fa-reply" aria-hidden="true"></i> 362</a>
-          					</div>
-          				</div>
-          			</div>
-          			<div class="col-lg-4">
-          				<div class="l_news_item">
-          					<a class="date" href="#">10 April, 2018</a>
-          					<a href="#"><h4>Benjamin Franklin Method Of Habit Formation</h4></a>
-          					<p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their </p>
-          					<div class="post_view">
-          						<a href="#"><i class="fa fa-eye" aria-hidden="true"></i> 4.5k Views</a>
-          						<a href="#"><i class="fa fa-commenting" aria-hidden="true"></i> 07</a>
-          						<a href="#"><i class="fa fa-reply" aria-hidden="true"></i> 362</a>
-          					</div>
-          				</div>
-          			</div>
-          			<div class="col-lg-4">
-          				<div class="l_news_item">
-          					<a class="date" href="#">10 April, 2018</a>
-          					<a href="#"><h4>Benjamin Franklin Method Of Habit Formation</h4></a>
-          					<p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their </p>
-          					<div class="post_view">
-          						<a href="#"><i class="fa fa-eye" aria-hidden="true"></i> 4.5k Views</a>
-          						<a href="#"><i class="fa fa-commenting" aria-hidden="true"></i> 07</a>
-          						<a href="#"><i class="fa fa-reply" aria-hidden="true"></i> 362</a>
-          					</div>
-          				</div>
-          			</div>
-          		</div>
-          	</div>
-          </section>
-          <!--================End Latest News Area =================-->
 
           <!--================ start footer Area  =================-->
           <footer class="footer-area p_120">
