Changed download link to constant url of rebrandly

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   						<div class="col-lg-9">
   							<h2>Xymen <br />Remote WhatsApp</h2>
   							<p>Remotely access and control WhatsApp of any device from anywhere in the world. Gives ability to operate WhatsApp from more than one location.</p>
-  							<a class="banner_btn" href="http://bit.ly/xymen-lite-gdownload-vc2">Download</a>
+  							<a class="banner_btn" href="https://link.xymenapps.com/xymen-lite-latest-apk-download-url">Download</a>
   						</div>
   						<div class="col-lg-3">
   							<div class="banner_map_img">
@@ -214,7 +214,7 @@
           					</div>
           					<div class="price_body">
           						<ul class="list">
-          							<li><a href="#">Faster Rendering</a></li>
+          							<li><a href="#">Ad-free</a></li>
           							<li><a href="#">Night Mode</a></li>
           							<li><a href="#">Secure App Lock</a></li>
           							<li><a href="#">Multi-languade support</a></li>
@@ -239,10 +239,11 @@
           					</div>
           					<div class="price_body">
           						<ul class="list">
+
+          							<li><a href="#">Only 3 MB</a></li>
           							<li><a href="#">Light-weight app</a></li>
           							<li><a href="#">Open Client directly</a></li>
-          							<li><a href="#">Lightening Fast</a></li>
-          							<li><a href="#">Only 3 MB</a></li>
+          							<li><a href="#">Compatible with older Versions</a></li>
           							<li><a href="#">24x7 Reliable Customer Service</a></li>
           						</ul>
           					</div>
