--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
           <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
           <link rel="icon" href="img/favicon.png" type="image/png">
           <title>XymenApps</title>
+          <meta name="description" content="Download latest and updated apk of Xymen App from its official website - XymenApps | Xymen Remote For WhatsApp">
+          <meta name="author" content="XymenApps">
+          <meta name="robots" content="index,follow">
+          <meta name="rating" content="General">
           <!-- Bootstrap CSS -->
           <link rel="stylesheet" href="css/bootstrap.css">
           <link rel="stylesheet" href="vendors/linericon/style.css">
