Changed download button url to Xymen Pro

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   								<li class="nav-item"><a class="nav-link" href="#feature">FEATURES</a></li>
   								<li class="nav-item"><a class="nav-link" href="#video">VIDEO</a>
   								<li class="nav-item"><a class="nav-link" href="#price">PRICING</a>
-  								<li class="nav-item"><a class="nav-link" href="#screen">SCREENS</a>
+  								<li class="nav-item"><a class="nav-link" href="#screen">SCREENSHOTS</a>
                     <li class="nav-item"><a class="nav-link" href="blog.html">BLOG</a>
   								<!--<li class="nav-item submenu dropdown">
   									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
@@ -99,7 +99,7 @@
   						<div class="col-lg-9">
   							<h2>Xymen <br />Remote WhatsApp</h2>
   							<p>Remotely access and control WhatsApp of any device from anywhere in the world. Gives ability to operate WhatsApp from more than one location.</p>
-  							<a class="banner_btn" href="https://link.xymenapps.com/xymen-lite-latest-apk-download-url">Download</a>
+  							<a class="banner_btn" href="https://link.xymenapps.com/xymen-pro-latest-apk-download-url">Download</a>
   						</div>
   						<div class="col-lg-3">
   							<div class="banner_map_img">
