--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
           <link rel="icon" href="img/favicon.png" type="image/png">
           <title>XymenApps</title>
-          <meta name="description" content="Download latest and updated apk of Xymen App from its official website - XymenApps | Xymen Remote For WhatsApp">
+          <meta name="description" content="Download latest and updated apk of Xymen App from its official website - XymenApps | Xymen Remote For WhatsApp | Xymen Web Beta | Xymen Pro APK Download | Xymen WhatsWeb | Xymen Remote WhatsApp | XymenApp Official | Xymen Inc. |">
           <meta name="author" content="XymenApps">
           <meta name="robots" content="index,follow">
           <meta name="rating" content="General">
