Suspended YT links changed

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           		</div>
           		<div class="video_area" id="video">
           			<img class="img-fluid" src="img/video-1.png" alt="">
-          			<a class="popup-youtube" href="https://www.youtube.com/watch?v=9koSJ6TXTls">
+          			<a class="popup-youtube" href="https://www.youtube.com/watch?v=q6MbodTvbZ8">
           				<img src="img/icon/video-icon-1.png" alt="">
           			</a>
           		</div>
@@ -414,7 +414,7 @@
                           <a href="http://www.facebook.com/XymenInc" target="_blank"><i class="fa fa-facebook"></i></a>
                           <a href="https://twitter.com/XymenInc" target="_blank"><i class="fa fa-twitter"></i></a>
                           <a href="https://www.instagram.com/xymen.apps/" target="_blank"><i class="fa fa-instagram"></i></a>
-                          <a href="https://www.youtube.com/channel/UCv3oAptrhTg9l10B_goBBnA" target="_blank"><i class="fa fa-youtube"></i></a>
+                          <a href="https://www.youtube.com/channel/UC7P6XRqhId-9uDgnZ33UX3Q" target="_blank"><i class="fa fa-youtube"></i></a>
                       </div>
                   </div>
               </div>
