Added Download button in Pricing section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           						</ul>
           					</div>
           					<div class="price_footer">
-          						<a class="main_btn2" href="#">Coming Soon</a>
+          						<a class="main_btn2" href="https://link.xymenapps.com/xymen-pro-latest-apk-download-url">Download</a>
           					</div>
           				</div>
           			</div>
