Moved links to JS

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   						<div class="col-lg-9">
   							<h2>Xymen <br />Remote WhatsApp</h2>
   							<p>Remotely access and control WhatsApp of any device from anywhere in the world. Gives ability to operate WhatsApp from more than one location.</p>
-  							<a class="banner_btn" href="https://link.xymenapps.com/xymen-pro-latest-apk-download-url">Download</a>
+  							<a id="main-download-button" class="banner_btn" href="#">Download</a>
   						</div>
   						<div class="col-lg-3">
   							<div class="banner_map_img">
@@ -226,7 +226,7 @@
           						</ul>
           					</div>
           					<div class="price_footer">
-          						<a class="main_btn2" href="https://link.xymenapps.com/xymen-pro-latest-apk-download-url">Download</a>
+          						<a class="main_btn2" id="xymen-pro-download-button" href="#price">Download</a>
           					</div>
           				</div>
           			</div>
@@ -252,7 +252,7 @@
           						</ul>
           					</div>
           					<div class="price_footer">
-          						<a class="main_btn2" href="http://bit.ly/xymen-lite-gdownload-vc2">Download</a>
+          						<a class="main_btn2" id="xymen-lite-download-button" href="#price">Download</a>
           					</div>
           				</div>
           			</div>
@@ -442,5 +442,6 @@
           <script src="js/mail-script.js"></script>
           <script src="vendors/popup/jquery.magnific-popup.min.js"></script>
           <script src="js/theme.js"></script>
+          <script src="js/my-javascript.js"></script>
       </body>
   </html>
