Added more links to JS

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
           							<li><a href="#">24x7 Reliable Customer Service</a></li>
           						</ul>
           					</div>
-          					<div class="price_footer">
-          						<a class="main_btn2" id="xymen-pro-download-button" href="#price">Download</a>
+          					<div class="price_footer" id="xymen-pro-download-button">
+          						<a class="main_btn2" href="#price">Download</a>
           					</div>
           				</div>
           			</div>
@@ -251,8 +251,8 @@
           							<li><a href="#">24x7 Reliable Customer Service</a></li>
           						</ul>
           					</div>
-          					<div class="price_footer">
-          						<a class="main_btn2" id="xymen-lite-download-button" href="#price">Download</a>
+          					<div class="price_footer" id="xymen-lite-download-button">
+          						<a class="main_btn2" href="#price">Download</a>
           					</div>
           				</div>
           			</div>
@@ -326,7 +326,7 @@
           <!--================End Testimonials Area =================-->
 
           <!--================Download App Area =================-->
-          <section class="download_app_area p_120">
+          <section class="download_app_area p_120" id="download-app">
           	<div class="container">
           		<div class="app_inner">
           			<h2>Download This App Today!</h2>
@@ -338,18 +338,18 @@
   									<i class="fa fa-apple" aria-hidden="true"></i>
   								</div>
   								<div class="media-body">
-  									<a href="#"><h4>Coming Soon</h4></a>
+  									<a href="#download-app"><h4>Coming Soon</h4></a>
   									<p>on App Store</p>
   								</div>
   							</div>
           				</div>
-          				<div class="app_btn">
+          				<div class="app_btn" id="download-android-app">
           					<div class="media">
   								<div class="d-flex">
   									<i class="fa fa-android" aria-hidden="true"></i>
   								</div>
   								<div class="media-body">
-  									<a href="#"><h4>Coming Soon</h4></a>
+  									<a href="#download-app"><h4>Download</h4></a>
   									<p>on Play Store</p>
   								</div>
   							</div>
@@ -408,13 +408,15 @@
                       </div>
                   </div>
                   <div class="row footer-bottom d-flex justify-content-between align-items-center">
-                      <p class="col-lg-8 col-md-8 footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                      <p class="col-lg-8 col-md-8 footer-text m-0">XymenApps isn't affiliated with, sponsored or endorsed by WhatsApp Inc.</p>
+                      <p class="col-lg-8 col-md-8 footer-text m-0"> The "WhatsApp" name is copyright to WhatsApp, Inc.</p>
+                      <p class="col-lg-8 col-md-8 footer-text m-0">
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | XymenApps</p>
                       <div class="col-lg-4 col-md-4 footer-social">
-                          <a href="http://www.facebook.com/XymenInc" target="_blank"><i class="fa fa-facebook"></i></a>
-                          <a href="https://twitter.com/XymenInc" target="_blank"><i class="fa fa-twitter"></i></a>
-                          <a href="https://www.instagram.com/xymen.apps/" target="_blank"><i class="fa fa-instagram"></i></a>
-                          <a href="https://www.youtube.com/channel/UC7P6XRqhId-9uDgnZ33UX3Q" target="_blank"><i class="fa fa-youtube"></i></a>
+                          <a id="social-facebook" href="#"><i class="fa fa-facebook"></i></a>
+                          <a id="social-instagram" href="#"><i class="fa fa-instagram"></i></a>
+                          <a id="social-twitter" href="#"><i class="fa fa-twitter"></i></a>
+                          <a id="social-youtube" href="#"><i class="fa fa-youtube"></i></a>
                       </div>
                   </div>
               </div>
